syntax="proto3";
import "google/protobuf/timestamp.proto";

message RegisterRequest{
  int32 Id = 1;
  string Name =2;
  string EmailAddress =3;
  string DeliveryAddress =4;
  string PhoneNumber =5;
  string Password =6;
}

message LoginRequest{
  string Email =1;
  string Password =2;
}

message AddCoffeeToCart{
  int32 CoffeeId =1;
}

message Response{
  string Message =1;
}

message Order_coffee{
  int32 Order_ID =1;
  repeated  RegisterRequest Order_Cart =2;
  google.protobuf.Timestamp Orderered_At =3;
  double  Price =4;
}

service CoffeeUserServices{
  rpc Register(RegisterRequest) returns (Response);
  rpc Login(LoginRequest) returns (Response);
  rpc AddCoffeeInCart(AddCoffeeToCart) returns (Response);
}

option go_package="./coffee";